[package]
name = "spider"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
rand = { version = "0.9.2", features = ["serde"] }
rand_xoshiro = { version = "0.7.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
signal-hook = "0.3.18"

[lints.clippy]
match_same_arms = "warn"
or_fun_call = "warn"
semicolon_if_nothing_returned = "warn"
